--- a/gb/news392_4.md
+++ b/gb/news392_4.md
@@ -1,4 +1,24 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"></a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"></a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"></a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"></a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/25/n12904206.md#1" target="_blank">大成漫画：颠轿歌</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/25/n12904206.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12904220-136e4d779c435864c87a4628521481f3-150x120.jpg" align ="left"></a>大街走，小巷窜，
+四处抓车看不见。
+正着急，急红眼：
+撬开仓房把苫布掀！
+哎呀呀，摩托在里边！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月26日 12:35 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/25/n12903873.md#1" target="_blank">【网海拾贝】与中共合作？西方不被玩死才怪</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/25/n12903873.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1287745929-1-150x120.jpg" align ="left"></a>习近平在气候峰会上发言用“碳达峰”这个词遮遮掩掩中国将继续增加碳排放。中国将继续增加碳排放的理由是“中国仍然是发展中国家”。习近平的这种逻辑立即遭到国际舆论的批评。西方与中国一起合作“减排”，会被中共玩死。——@LifetimeUSCN......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 9:42 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/25/n12903795.md#1" target="_blank">袁斌：王毅称中共极权也是一种民主 遭网友痛斥</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/25/n12903795.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12868241-GettyImages-1158767215-600x400-150x120.jpg" align ="left"></a>民主不只有一种形式，但不同形式的民主，其本质都是相同的，都是人民做主。在这一点上，民主与极权专制的区别是显而易见的。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 8:34 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/25/n12903262.md#1" target="_blank">杨威：王岐山也对美喊话 王毅再扮战狼</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/25/n12903262.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12868241-GettyImages-1158767215-600x400-150x120.jpg" align ="left"></a>4月24日，中共党媒新华社报导，中共国家副主席王岐山在纪念中美“乒乓外交”50周年活动上视频致辞。中共派出王岐山对美喊话，王毅也在另外的场合又扮演战狼，中美对抗难以缓和。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 10:55 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12901749.md#1" target="_blank">探秘世界各国的真实军力—英国欲重塑形象</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12901749.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12901798-GettyImages-1145054632-150x120.jpg" align ="left"></a>印太地区火药味越来越浓，中共的军事扩张咄咄逼人，也引起了欧洲国家的警惕，法国舰队已经进入印度洋。2021年，英国舰队也会来到印太地区。
+
+按照美国军事网站“全球火力”（Global Firepower）的排行，英国军力位列世界第8位。这样一来，世界军力前8名的国家中，美国、俄罗斯、中国、印度、日本、韩国、法国、英国.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 10:49 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/25/n12903194.md#1" target="_blank">民主党拒付百万保证金 亚利桑那审计选票或继续</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/25/n12903194.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/03/2011070824451528.jpg" align ="left"></a>周四（4月22日），就在亚利桑那州即将启动对2020大选中马里科帕县（Maricopa County）210万张选票进行全面审计的前一天，州民主党提出紧急诉讼，要求法官下令暂时停止审计。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 9:55 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12902918.md#1" target="_blank">王友群：第八任中共党魁胡耀邦的最后结局</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12902918.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12902920-2068c8cef8b2bae545088c075d390fb8-600x400-150x120.jpeg" align ="left"></a>胡耀邦是中共体制内的开明派。1981年6月，在中共十一届六中全会上，胡当选中共中央主席。1982年中共十二大后，不设中共中央主席，胡成为中共中央总书记。1987年1月，胡被迫辞去中共中央总书记职务。但在1987年10月的中共十三大上，胡仍当选中共政治局委员。
+
+1978年中共十一届三中全会后，胡耀邦是支持邓小平进行.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 7:50 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12903066.md#1" target="_blank">周晓辉：张学良承认是党员 中共推动西安军事政变</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12903066.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12903102-KMT_officials_in_the_Xian_Incident-600x400-150x120.jpg" align ="left"></a>中共刻意让蒋介石替张学良背几十年黑锅，目的显然是要将其刻画成不抵抗日军侵略的不堪形象，从而凸显中共在抗战中的“巨大作用”。但谎言永远是谎言，一旦揭开，中共画皮下邪恶的面目就暴露在光天化日之下。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 6:42 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12902910.md#1" target="_blank">岳山：东航陪睡事件逆转抓人 背后水有多深？</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12902910.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12902968-donghang4-600x400-1-150x120.jpg" align ="left"></a>总部在上海的中国东方航空公司几天前爆出性贿赂丑闻，剧中女角是有“劳模空姐”之称的党支书空姐倪高平，她是东航客舱部高级经理，被举报受上司教唆向更高层次的官员仇某进行性贿赂，并且有不堪入目的微信截图为证。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 4:19 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12902566.md#1" target="_blank">【名家专栏】从安徒生童话看取消文化</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12902566.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12902569-Emperor_Clothes_01-1-150x120.jpg" align ="left"></a>很多年前，当我读到汉斯?克里斯汀?安徒生（Hans Christian Andersen）的故事《国王的新衣》时，在一开始的印象并不深刻。有谁会看不到一个裸体没穿衣服的男人呢？可是这个故事常被诠释成是在讨论表象及现实的问题。任何不注重表象的人，都能看见国王是没穿衣服的。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 2:30 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12902525.md#1" target="_blank">【名家专栏】美日首脑会晤：承诺再承诺</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12902525.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12902647-GettyImages-1312842074-150x120.jpg" align ="left"></a>美国对日本防务的承诺是真诚的，但看似矛盾的是，如果中共对日本发动全面进攻，美国很容易兑现承诺。如果中共采取目前的“打擦边球”的做法，日本和整个地区可能会很快陷入严重的麻烦。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月24日 10:59 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/23/n12901484.md#1" target="_blank">【有冇搞错】习的话蓬佩奥听懂了 超限战进行中</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/23/n12901484.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12902524-f52cc3d6f01a4233ce47a8030fdfbac8-150x120.jpg" align ="left"></a>习近平气候峰会的讲话，美国人完全听不懂，但弦外之音有人懂了。对付美国，中共的超限战不是未来手段，而是正在进行当中。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月24日 10:30 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12902192.md#1" target="_blank">谢卫国：忆四?二五中南海和平上访</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12902192.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12902219-2004-4-23-425_p-150x120.jpeg" align ="left"></a>日月星河循环往复，冬去春来又一载，清华迎来了110周年校庆，这一天，就会让人回忆起一九九九年校庆日四月二十五日，当天上万名法轮功学员去中南海和平上访，时任总理朱镕基学长看到法轮功学员的正行，他本人经历过中共反右迫害，感受到法轮功学员的诚意和合理请求，出面做出正确处理，使得“四?二五”和平落幕，赢得海外媒体一片赞誉之声。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月24日 8:51 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12902318.md#1" target="_blank">陈思敏：四二五有感“中国本来可以是另一个样子”</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12902318.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12902348-7ED5051-150x120.jpeg" align ="left"></a>4月25日，是法轮功学员在北京中南海和平上访22周年的日子。回顾1999年这一天，若用一句话来代表各界的震撼，会是现场一位执勤警察指着被法轮功学员清理得干干净净的地面对另外一个警察说：“什么是德，这就是德！”......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月24日 5:56 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12902297.md#1" target="_blank">戈壁东：中共超限战攻城略地 美国全面应战还来得及吗？</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12902297.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2015/10/1510190457201664-150x120.jpg" align ="left"></a>国会刚刚高票通过了《2021战略竞争法案》，这是美国在最近几十年里第一次以法案形式确立的与中共决战的一个重大的历史性的国家决策。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月24日 5:20 PM			</td></tr>
@@ -27,18 +47,13 @@
 
 相比之下，习近平发表讲话时.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月23日 1:22 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/22/n12898718.md#1" target="_blank">陈思敏：政法系统大整顿 孟建柱岌岌可危？</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/22/n12898718.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/000_Hkg9561027-1-600x400-150x120.jpg" align ="left"></a>4月16日，在负面传闻缠身中，中共前中央政法委书记孟建柱现身上海原市长杨雄告别式。虽然有关孟建柱受查的消息迟迟未能证实，不过，近日从北京到中央政法系统的最新动荡，还是都能联系到孟建柱。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月23日 10:31 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/22/n12898751.md#1" target="_blank">张慧东：李克强考察四川目的是救场？</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/22/n12898751.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/03/GettyImages-1231522421-600x400-150x120.jpeg" align ="left"></a>4月20日，中共党媒新华网报导了李克强在四川考察，在非常简短的报导中，仅仅描述他的考察行程，而没有其他任何具体细节。而中共国务院网页则以《李克强在成都考察中国—欧洲中心释放什么信号》为标题，登载了李克强的讲话。李在考察时讲：“中国（中共）将一如既往坚持对外开放政策，开放的大门会越开越大。”......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月23日 9:53 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/22/n12898985.md#1" target="_blank">金言：袭击香港大纪元 中共惹天怒人怨</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/22/n12898985.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12883750-148423-150x120.jpg" align ="left"></a>大家知道，在中共“温水煮青蛙”、逐步蚕食把香港由“一国两制”变成“一国一制”的过程中，尤其是面对香港上百万民众自发的反送中抗争运动。独立、敢言的《大纪元时报》，还有壹传媒旗下的《苹果日报》，是仅有的少数几家能够坚守道义良知，不畏强暴，敢于报导事实真相的香港中文媒体。从而一直被中共视为眼中钉、肉中刺，试图让其噤声，并欲除.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月23日 8:56 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/23/n12899125.md#1" target="_blank">【财经话题】拜登的富人税或让美股封顶</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/23/n12899125.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12853273-GettyImages-WS-sign-2-150x120.jpg" align ="left"></a>华尔街对拜登政府最担心的事情就是加税，周四（22日）道指因加税的传闻而下挫321点或0.94%，吃掉了前一日的反弹。据多家外媒报导，拜登计划将资本利得税率由目前的20%提高近倍至39.6%，加上投资收益附加税3.8%，联邦资本利得税率将高达43.4%。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月23日 8:52 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/22/n12898701.md#1" target="_blank">钟原：海南疫情故事难掩大陆隔离者四月翻番</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/22/n12898701.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12898726-GettyImages-1311481246-150x120.jpg" align ="left"></a>中共国家卫健委通报的4月20日疫情简况中，忽然新增确诊病例21例，海南12例、上海3例、天津2例、广东1例、四川1例、云南2例。云南疫情并未受控，瑞丽市继续封城，海南又冒出12例。而且，中共国家卫健委的疫情通报显示，过去20天内，被隔离观察的人数几乎翻番。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月23日 8:10 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/22/n12898931.md#1" target="_blank">谢田：海上民兵菲律宾舞剑意在台湾</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/22/n12898931.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12898954-Phillipines-Sea-CCP-boats-000_96P3E4-600x400-150x120.jpg" align ="left"></a>中共海上民兵的“渔船”船队，从今年3月初开始，已经在有争议的牛轭礁（Whitsun Reef）海域和及菲律宾外海盘恒了近两个月了。高达两、三百艘的大型渔船，造型类似、规格类似、整整齐齐的挤在一起，不打渔也不撒网，就这么呆在海上，虎视眈眈，肯定不怀好意。但中共为什么要这样做、其意图究竟是什么？国际社会和中国问题的观察家们.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月23日 6:30 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/22/n12898534.md#1" target="_blank">周晓辉：项英陈毅卖命结局惨 皖南事变罪魁是中共</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/22/n12898534.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12898628-1941N4A-600x400-1-150x120.jpeg" align ="left"></a>项英、陈毅，乃至诸多中共高官的命运，其实早在他们加入中共那一天就已注定，而他们主动接受魔鬼的诱惑、没有选择远离，又能怨谁呢？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月23日 5:57 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/22/n12897596.md#1" target="_blank">黄天辰：台湾海外华文推广 了解传统中华文化的好契机</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/22/n12897596.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12897611-5d961ba8b8d374690a437eb51d7037e5-150x120.jpg" align ="left"></a>周一，有幸参加了台湾中华民国侨务委员会在线举行的“海外华语文教育推广”座谈会，鉴于当前全球兴起“华语热”，加上各地陆续关闭孔子学院，欧美国家期盼台湾能填补华语文教学需求缺口。为此，欧美将设立“台湾华语文学习中心”，为海外主流华语爱好者开创一个“民主、自由”的学习环境。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月23日 2:20 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/22/n12898460.md#1" target="_blank">孙国祥：该是WHO正视台湾崛起的时候！</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/22/n12898460.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/2005192231572378-150x120.jpg" align ="left"></a>台湾被排除在国际卫生组织体系之外，主因于中共政权对台湾主权的非法主张，试图以“一个中国原则”并吞从未有效控制过的国家—台湾，并透过主导国际标准和规则制定、议程设定及全球治理，将台湾排除在成员资格之外。台湾不仅仅是全球防疫的模范生，也是美国印太战略的重要组成国家，更是坚持以民主、人权、法治和尊重人权为基础的守护者。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月22日 11:23 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/21/n12896200.md#1" target="_blank">【有冇搞错】博鳌论坛越来越冷 习近平言不由衷</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/21/n12896200.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12898383-d336e8001c2f26df384eab95172cfd90-150x120.jpg" align ="left"></a>博鳌论坛习近平发表讲话极具中共特色，宇宙级的叙事，却扭转不了亚洲各国不断增加的不安全感。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月22日 10:30 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/22/n12897500.md#1" target="_blank">【网海拾贝】中共什么都干得出来</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/22/n12897500.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12897538-951165836-150x120.jpeg" align ="left"></a>美国众议院情报委员会副主席努涅斯接受福克斯采访说，中共最核心的目标就是打垮美元，用中共的数字货币取代美元。虽然他相信中共不会得逞，但是他敦促拜登政府必须行动，不能只说不做，因为美国必须相信习和中共什么都干得出来。——@ZanXixi......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月22日 4:24 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/20/n12893881.md#1" target="_blank">吴文渊：激进派用种族审视社会问题 加剧分裂</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/20/n12893881.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12893892-GettyImages-1266183128-150x120.jpg" align ="left"></a>就在加州教育委员会（California Board of Education）投票通过一项革命性的激进课程——《民族研究示范课程》（Ethnic Studies Model Curriculum，ESMC）的前两天，在我的家乡佐治亚州（Georgia），一名精神出了问题的白人男子在三家按摩中心枪杀了8人，受害者包括6.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月22日 2:48 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/22/n12896752.md#1" target="_blank">红三代8岁“反华”与温家宝80岁逆主流反思</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/22/n12896752.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12894699-wjb1-150x120.jpeg" align ="left"></a>8岁和80岁是人生两头真的时光。一头是童心纯真、烂漫少年，一头是“家有一老、犹如一宝”。应该说这两个年代的人，或许无法给社会直接创造有形的财富，但对社会的伤害力也是最小。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月22日 2:20 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/25/n12903785.md#1" target="_blank">郑纯清：中共毁灭全人类的活铁证</a><br></h3>直连生命基因，难测危害多深。
+可致老年痴呆，生化武器逼真。
+中共辉瑞疫苗，更比病毒凶狠。
+美国疾控中心，研究报告瘆人。
+听闻毛骨悚然，不能不细思忖。
+特供铁定潜规，怎么未成贡品？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 7:56 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/25/n12903482.md#1" target="_blank">【网海拾贝】中共和西方，谁末日来临？</a><br></h3>习近平在博鳌论坛上的一番讲话大有警告西方的意味。一向被公认为霸权、强权和威权的中共，如今遭到整个西方阵营的联手反击，但为何习近平还表现得如此强势？是有王牌在手还是末日狂奔？香港实业家袁弓夷透露从北京方面得到的消息，指“当局感觉良好，感觉非常之良好”，外界觉得中共末日来临，中共反而觉得西方的末日来临。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 1:58 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12902280.md#1" target="_blank">吐为快：贺骄郎?赵家战狼与狗儿</a><br></h3>西降东升梦。
 踏春风，
 赵营秣马，
@@ -48,7 +63,5 @@
 赢得主人万千宠。
 盛宴外事喜相从，
 更誉为中国特色种。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月24日 4:45 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/22/n12898708.md#1" target="_blank">夏林：余茂春和博明两人 让中共真正胆寒</a><br></h3>他们俩，一个是被中共痛骂为“汉奸”的美籍华裔余茂春博士；另一个是能讲流利中文，在中国被公安恐袭过的美国人博明。这两人是当之无愧的美中关系专家。他们在上届川普政府中，一个担任国务卿蓬佩奥的首席中国顾问，另一个则是白宫的副国安顾问，对川普政府与中共如何打交道，起到了关键作用。现在美国国会又请这两位作证，说明国会制定美中经济.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月23日 2:59 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/22/n12897365.md#1" target="_blank">中共罪行录之八：装甲兵司令员被活活整死</a><br></h3>许光达是中共的开国大将，中共建政后先后任装甲兵司令员、国防部副部长、中共八届中央委员。1955年他被授予大将军衔，获一级八一勋章、一级独立自由勋章、一级解放勋章。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月22日 3:57 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/news392_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/abqqad3453/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/abqqad3453/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/abqqad3453/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/abqqad3453/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/abqqad3453/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/abqqad3453/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/abqqad3453/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/abqqad3453/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/abqqad3453/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/abqqad3453/djy/blob/master/gb/news392_5.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/abqqad3453/djy/blob/master/gb/news392_4.md#1<br><a href="https://github.com/abqqad3453/djy/blob/master/gb/news392_4.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/abqqad3453/djy/blob/master/gb/news392_4.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news392_4.htm">https://www.epochtimes.com/gb/news392_4.htm</a>    （国内需<a href="https://github.com/abqqad3453/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
